[metadata]
name = vroompkg
version = 0.0.11
author = Manasi Ganti
author_email = manasi.ganti@gmail.com
description = using machine learning to detect and improve engagement
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/manasi-ganti/vroom
project_urls =
    Bug Tracker = https://github.com/manasi-ganti/vroom/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent


[options]
packages = vroompkg
install_requires =
  requests
  dlib
  imutils
  matplotlib
  numpy
  opencv-python
  scipy
python_requires = >=3.6
include package_data = True

[options.package_data]
* = 
  data/*.png
  data/*.dat
  data/*.txt
  data/*.caffemodel


